# synthesizer

./: .clang-format  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  README.md  conftest.py  format_extensions.sh  package_svo_cache.sh  pyproject.toml  requirements.txt  self-consistent-resample.md  setup.py
docs/: CONTRIBUTING.md
examples/: conftest.py  dustcurves.py
grids/: README.md  download_bc03.sh
install_grids/: install_bc03.sh
logo/: synthesizer-banner.ai  synthesizer-logo.ai
other_examples/: plot_spectra_age.py
profiling/: README.md  make_all_plots.py  move_profiling_to_docs.sh  profile_nparticles_memory.py  profile_nparticles_scaling.py  profile_plot.py  profile_thread_scaling.py  profile_wavelength_memory.py  profile_wavelength_scaling.py  run_doc_profiling_plots.sh  time_imaging.py  time_spectra.py
synthesizer/: download_bc03.sh  dust.py  filters.py  grid.py  line.py  load_data.py  sed.py  utils.py  weights.c
tests/: conftest.py  test_accepts.py  test_basic_imaging.py  test_broadening.py  test_dust_attenuation.py  test_dust_generators.py  test_examples.py  test_extension_errors.py  test_extractors.py  test_filters.py  test_get_param.py  test_grid.py  test_initialisation.py  test_instrument_loading.py  test_instruments.py  test_integration.py  test_kernel_functions.py  test_line.py  test_los.py  test_operations.py  test_parametric_stars.py  test_particle_bh.py  test_particle_galaxy.py  test_particle_imaging.py  test_particle_spectra_extension.py  test_particle_stars.py  test_particles.py  test_photometry.py  test_pipeline.py  (+11 more)
(+399 files in other folders)
